Code and tests update, added custom Exceptions